fixed port mapping

--- a/accounts/.env.example
+++ b/accounts/.env.example
@@ -1,3 +1,3 @@
 # Environment variables
 PORT=3400
-MONGO_URL=<YOUR_MONGODB_CONNECTION_STRING>
+MONGO_URL=mongodb://mongo:y64zEVwEiy@169.61.62.90:32664/admin
